--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,13 @@
 baseURL = 'https://ashikahmad.github.io/Timely-Site/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Timely'
 theme = "Portio"
 
 [params]
 footerLogo = "images/icon_64.png"
 footerLogoLabel = "Timely"
 logo = "images/icon_64.png"
-copyright = "All right reserved copyright © Portio 2020"
+copyright = "All right reserved copyright © BlessedPixels.com 2020"
 
 # Main Menu
 [[menu.main]]
