--- a/data/aboutSection.yml
+++ b/data/aboutSection.yml
@@ -9,12 +9,12 @@ title: >
 content: >
   ### Elegant native-alike design with focused features
 
-  I love to work in User Experience & User Interface designing. Because I love
-  to solve the design problem and find easy and better solutions to solve it. I always
-  try my best to make good user interface with the best user experience. I have been
-  working as a Visual designer from.
+  Keep track of your day and stay productive with calendar and events just
+  on your fingertips. Also keep track of time with in-place world-cloks 
+  when you're connecting with people from distance. And all of these with 
+  an easy-to-use quickly reachable sleek interface.
 button1Name: Hire me
 button2Name: Download CV
 button1Target: contact
 button2Target: contact
-image: images/image2.png
+image: images/screenshots/screenshot-2.png
