--- a/data/aboutSection.yml
+++ b/data/aboutSection.yml
@@ -7,14 +7,14 @@ title: >
   Timely is a menubar-focused Mac application for calendar and world-clock.
 
 content: >
-  ### Elegant native-alike design with focused features
+  ### Elegant design with focused features
 
   Keep track of your day and stay productive with calendar and events just
   on your fingertips. Also keep track of time with in-place world-cloks 
   when you're connecting with people from distance. And all of these with 
   an easy-to-use quickly reachable sleek interface.
-button1Name: Hire me
-button2Name: Download CV
+button1Name: Download
+button2Name: Getting Started
 button1Target: contact
 button2Target: contact
 image: images/screenshots/screenshot-2.png
